# auto-label-pipeline

./: .gitignore  .pylintrc  LICENSE  README.md  dvc.yaml  mypy.ini  params.yaml  pyproject.toml  requirements-dev.txt  requirements.txt  runUnitTests.sh
data/final/: class.metrics.csv  data.csv
data/interim/: .gitignore
data/prepared/: .gitignore
data/raw/: .gitignore  README.md  occupations.wikidata.csv
dvc_plots/: .gitignore  README.md  index.html
model/: .gitignore  class.metrics.csv  train.metrics.json
reports/: .gitignore  prepare.metrics.json  relabel.metrics.json
src/: README.md  fetch.py  models.py  prepare.py  relabel.py  train.py  utils.py
